# docs/swagger.json
@@ -159,8 +159,14 @@
                 "created_at": {
                     "type": "string"
                 },
+                "created_by": {
+                    "type": "integer"
+                },
                 "deleted_at": {
                     "$ref": "#/definitions/gorm.DeletedAt"
+                },
+                "deleted_by": {
+                    "type": "integer"
                 },
                 "email": {
                     "type": "string"
@@ -179,6 +185,9 @@
                 },
                 "updated_at": {
                     "type": "string"
+                },
+                "updated_by": {
+                    "type": "integer"
                 },
                 "user_books": {
                     "type": "array",
